[Mac] Fix Cmd+Plus to zoom keyboard shortcut.

GetKeyEquivalentAndModifierMaskFromAccelerator() computes the key
equivalent for menu items. If the key equivalent is inherently shifted
(e.g. + and }), do not include Shift in the modifier flags, since it is
already encoded in the equivalent. Including it in the flags results in
Shift being required in addition to the key.

Bug: 867788
Test: Cmd+Plus zooms the page, as well as Cmd+Shift+Plus.
Change-Id: I3536d7652804f77a14b51197cdf5f49d6defc77d
Reviewed-on: https://chromium-review.googlesource.com/1157224
Reviewed-by: Erik Chen <erikchen@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580427}
Former-commit-id: 9a6b5d320d944a405d2bba0dee46aa71d97c592c